--- a/EURUSD-bot.ipynb
+++ b/EURUSD-bot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,10 +22,10 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.indexing._iLocIndexer at 0x262d7d27a60>"
+       "<pandas.core.indexing._iLocIndexer at 0x22747142b60>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
     "import pandas as pd\n",
     "\n",
     "# Yahoo Finance APi typically only provides 15-minute interval data for the last 60 days\n",
-    "dataF = yf.download(\"EURUSD=X\", start=\"2023-12-01\", end=\"2024-01-30\", interval='1d')\n",
+    "dataF = yf.download(\"EURUSD=X\", start=\"2023-12-07\", end=\"2024-02-03\", interval='15m')\n",
     "dataF.iloc[-1:,:]\n",
     "dataF.Open.iloc"
    ]
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,33 @@
     "\n",
     "#signal_generator(data)\n",
     "dataF[\"signal\"] = signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "signal\n",
+       "0    3549\n",
+       "2     158\n",
+       "1     148\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Market Print Statements\n",
+    "\n",
+    "dataF.signal.value_counts()\n",
+    "#dataF.iloc[:, :]"
    ]
   },
   {
@@ -204,7 +231,7 @@
     "\n",
     "# SCHEDULED\n",
     "scheduler = BlockingScheduler()\n",
-    "scheduler.add_job(trading_job, 'cron', day_of_week='mon-fri', hour='00-23', minute='1,6,11,16,21,26,31,36,41,46,51,56', start_date='2023-09-26 01:00:00')\n",
+    "scheduler.add_job(trading_job, 'cron', day_of_week='mon-sun', hour='00-23', minute='0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59', second='0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59', start_date='2023-09-26 01:00:00')\n",
     "scheduler.start()"
    ]
   }
