--- a/EURUSD-bot.ipynb
+++ b/EURUSD-bot.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[*********************100%%**********************]  1 of 1 completed\n"
@@ -22,10 +22,10 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.indexing._iLocIndexer at 0x22747142b60>"
+       "<pandas.core.indexing._iLocIndexer at 0x131b765f790>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
