--- a/Lang.ipynb
+++ b/Lang.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[*********************100%%**********************]  1 of 1 completed\n"
@@ -22,10 +22,10 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.indexing._iLocIndexer at 0x22747142b60>"
+       "<pandas.core.indexing._iLocIndexer at 0x25eb135fab0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,6 +33,8 @@
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
+    "\n",
+    "# Testing Comment\n",
     "\n",
     "# Yahoo Finance APi typically only provides 15-minute interval data for the last 60 days\n",
     "dataF = yf.download(\"EURUSD=X\", start=\"2023-12-07\", end=\"2024-02-03\", interval='15m')\n",
@@ -252,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
